Resolve the css and javascript include issue

--- a/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/template/content.xhtml
+++ b/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/template/content.xhtml
@@ -7,6 +7,15 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <ui:composition>
-	Content declaration place holder
+	<!-- *****************************************************************************************************************
+	 HEADERWRAP
+	 ***************************************************************************************************************** -->
+	<div id="headerwrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-8 col-lg-offset-2"></div>
+			</div>
+		</div>
+	</div>
 </ui:composition>
 </html>
