--- a/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/template/footer.xhtml
+++ b/Learn-JSF-from-basic-to-database-connectivity-quickly/Section-05-Integrating-web-template/src/main/webapp/template/footer.xhtml
@@ -1,12 +1,51 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
+<!--http://localhost:8080/Section-05-Integrating-web-template/template/footer.html-->
+<html lang="en">
+<head>
+<meta charset="utf-8" />
+<title>Solid - Bootstrap Business Template</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+<meta content="" name="keywords" />
+<meta content="" name="description" />
 
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:h="http://xmlns.jcp.org/jsf/html"
-	xmlns:f="http://xmlns.jcp.org/jsf/core">
+<!-- Favicons -->
 
-<ui:composition>
+<link href="../resources/img/favicon.png" rel="icon" />
+<link href="../resources/img/apple-touch-icon.png"
+	rel="apple-touch-icon" />
+
+<!-- Google Fonts -->
+<link
+	href="https://fonts.googleapis.com/css?family=Raleway:400,700,900|Lato:400,900"
+	rel="stylesheet" />
+
+<!-- Bootstrap CSS File -->
+<link href="../resources/lib/bootstrap/css/bootstrap.min.css"
+	rel="stylesheet" />
+
+<!-- Libraries CSS Files -->
+<link href="../resources/lib/font-awesome/css/font-awesome.min.css"
+	rel="stylesheet" />
+<link href="../resources/lib/prettyphoto/css/prettyphoto.css"
+	rel="stylesheet" />
+<link href="../resources/lib/hover/hoverex-all.css" rel="stylesheet" />
+
+<!-- Main Stylesheet File -->
+<link href="../resources/css/style.css" rel="stylesheet" />
+
+<!-- =======================================================
+    Template Name: Solid
+    Template URL: https://templatemag.com/solid-bootstrap-business-template/
+    Author: TemplateMag.com
+    License: https://templatemag.com/license/
+  ======================================================= -->
+</head>
+
+<body>
+
+	<!-- *****************************************************************************************************************
+	 FOOTER
+	 ***************************************************************************************************************** -->
 	<div id="footerwrap">
 		<div class="container">
 			<div class="row">
@@ -56,5 +95,19 @@
 			</div>
 		</div>
 	</div>
-</ui:composition>
+	<!-- / copyrights -->
+
+	<!-- JavaScript Libraries -->
+	<script src="../resources/lib/jquery/jquery.min.js"></script>
+	<script src="../resources/lib/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../resources/lib/php-mail-form/validate.js"></script>
+	<script src="../resources/lib/prettyphoto/js/prettyphoto.js"></script>
+	<script src="../resources/lib/isotope/isotope.min.js"></script>
+	<script src="../resources/lib/hover/hoverdir.js"></script>
+	<script src="../resources/lib/hover/hoverex.min.js"></script>
+
+	<!-- Template Main Javascript File -->
+	<script src="../resources/js/main.js"></script>
+
+</body>
 </html>
